# MangoLauncher

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
docs/locales/: README.ru.md
mango_launcher/: __init__.py
src/: app.rs  assets.rs  auth.rs  error.rs  instance.rs  java.rs  launch.rs  lib.rs  logs.rs  main.rs  mods.rs  network.rs  platform.rs  profile.rs  progress.rs  settings.rs  ui.rs  utils.rs  version.rs
