[package]
name = "mango-launcher"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A modern Minecraft launcher written in Rust"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = "0.4.34"
crossterm = "0.27"
rand = "0.8.5"
ratatui = "0.26.0"
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.57"
dirs = "5.0.1"
indicatif = "0.17.8"
zip = "0.6.6"
futures = "0.3.30"
async-trait = "0.1.77"
log = "0.4.20"
env_logger = "0.11.1"

[dev-dependencies]
tokio-test = "0.4.3"
mockall = "0.12.1" 