[package]
name = "mango-launcher"
version = "0.1.0"
edition = "2021"
authors = ["Lain Iwakura <lain@iwakurahome.ru>"]
description = "A modern Minecraft launcher written in Rust"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.27"
rand = "0.8.5"
ratatui = "0.25"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
dirs = "5.0.1"
indicatif = "0.17.8"
zip = "0.6"
futures-util = "0.3"
async-trait = "0.1"
log = "0.4.20"
env_logger = "0.11.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
walkdir = "2.4"
regex = "1.10"
url = "2.5"
base64 = "0.21"
flate2 = "1.0"
tar = "0.4"

[dev-dependencies]
tokio-test = "0.4.3"
mockall = "0.12.1" 