[tool.poetry]
name = "mango-launcher"
version = "0.1.0"
description = "A modern Minecraft launcher written in Python"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "mango_launcher"}]

[tool.poetry.dependencies]
python = "^3.9"
PyQt6 = "^6.6.1"
aiohttp = "^3.9.3"
requests = "^2.31.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 